--- a/_posts/2025-04-02-经典代码之C++ looper的实现.md
+++ b/_posts/2025-04-02-经典代码之C++ looper的实现.md
@@ -1,6 +1,5 @@
-# 经典代码：C++ Looper 的实现，Android JNI 和高并发必备
-这篇博客分享的是 C++ looper 实现，代码来自Android官方仓库：https://github.com/android/ndk-samples/blob/main/native-codec
-讲讲设计思路、还有实战用法。准备好，代码走起！
+这篇博客分享的是 C++ looper 实现，Android JNI 和高并发必备。代码来自Android官方仓库：https://github.com/android/ndk-samples/blob/main/native-codec
+讲讲设计思路、还有实战场景。准备好，代码走起！
 
 
 ## Looper 是个啥？
@@ -226,8 +225,9 @@ Android 的looper,它在Android中扮演了特别重要的角色，无论在fram
 在实际的应用场景也挺广泛的，以下就是我想到的一些场景：
 1. UI更新  
 2. 消息处理  
-3. 媒体解码    
-### 总结：   
+3. 媒体解码  
+
+### 总结：    
 基于looper内部的事件循环，它特别适合用来处理异步事件。但是呢，有没有发现，上面代码中处理队列是在
 一个线程中完成的，鉴于单线程的处理能力，在高并发场景下可能存在消息积压情况，具体需要测试。
 
