--- a/_posts/2025-04-02-经典代码之C++ looper的实现.md
+++ b/_posts/2025-04-02-经典代码之C++ looper的实现.md
@@ -219,7 +219,7 @@ void looper::handle(int what, void *obj) {
 ### 应用场景：从 NDK 示例到实战
 
 native-codec 示例用 looper 处理媒体解码（AMediaCodec）任务中，但是looper不止使用于此，在开头提到
-Android 的looper,它在Android中扮演了特别重要的角色，无论在framework层，还是application层都离不开
+Android 的looper,它在Android中扮演了特别重要的角色，无论在framework层，还是application层都能看到
 它的身影。
 
 在实际的应用场景也挺广泛的，以下就是我想到的一些场景：
